--- a/package.json
+++ b/package.json
@@ -7,12 +7,14 @@
     "react": "^16.4.0",
     "react-dom": "^16.4.0",
     "react-icons": "^2.2.7",
+    "react-loading": "^2.0.2",
     "react-modal": "^3.4.5",
     "react-redux": "^5.0.7",
     "react-router-dom": "^4.2.2",
     "react-scripts": "1.1.4",
     "redux": "^4.0.0",
-    "redux-thunk": "^2.3.0"
+    "redux-thunk": "^2.3.0",
+    "uuid": "^3.2.1"
   },
   "scripts": {
     "start": "react-scripts start",
