--- a/package.json
+++ b/package.json
@@ -13,9 +13,11 @@
     "react-modal": "^3.4.5",
     "react-redux": "^5.0.7",
     "react-router-dom": "^4.2.2",
+    "react-s-alert": "^1.4.1",
     "react-scripts": "1.1.4",
     "redux": "^4.0.0",
     "redux-thunk": "^2.3.0",
+    "reselect": "^3.0.1",
     "uuid": "^3.2.1",
     "yup": "^0.25.1"
   },
